# credit-risk-modelling-UK

./: .gitignore  Credit risk project.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_EDA.ipynb  02_Feature_Engineering.ipynb
outputs/charts/: Charts and tables.xlsx
outputs/reports/: Data_Quality_Report.xlsx  Data_Quality_Report_edited YB.xlsx  POS_CASH_balance_profiling_report.csv  application_train YB.csv  bureau_balance_profiling_report.csv  bureau_profiling_report.csv  credit_card_balance_profiling_report.csv  installments_payments_profiling_report.csv  previous_application_profiling_report YB.csv  previous_application_profiling_report.csv
risk_governance_kit/: __init__.py  profiling.py
src/risk_governance_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
